--- a/README
+++ b/README
@@ -12,7 +12,7 @@ export PATH
 sudo apt-get install ruby1.9.1-dev
 sudo apt-get install libxslt-dev libxml2-dev
 sudo gem install bio-blastxmlparser
-
+sudo gem install gnuplot
 **************************************************
 **************** Implementation ******************
 **************************************************
